syncstorage-rs/TODO
Needs rust 1.80:

   Compiling num-traits v0.1.43
error[E0463]: can't find crate for `try_lock` which `want` depends on
  --> /scratch/www/syncstorage-rs/work/vendor/hyper-1.3.1/src/client/dispatch.rs:22:26
   |
22 |     let (giver, taker) = want::new();
   |                          ^^^^ can't find crate

error[E0463]: can't find crate for `want`
  --> /scratch/www/syncstorage-rs/work/vendor/hyper-1.3.1/src/client/dispatch.rs:47:12
   |
47 |     giver: want::Giver,
   |            ^^^^ can't find crate

error[E0463]: can't find crate for `want`
   --> /scratch/www/syncstorage-rs/work/vendor/hyper-1.3.1/src/client/dispatch.rs:168:12
    |
168 |     taker: want::Taker,
    |            ^^^^ can't find crate
